@@ -41,6 +41,7 @@ importFrom(kwb.utils,catAndRun)
 importFrom(kwb.utils,catIf)
 importFrom(kwb.utils,commaCollapsed)
 importFrom(kwb.utils,createDirectory)
+importFrom(kwb.utils,defaultIfNULL)
 importFrom(kwb.utils,hsQuoteChr)
 importFrom(kwb.utils,hsSafeName)
 importFrom(kwb.utils,hsTrim)
@@ -52,6 +53,7 @@ importFrom(kwb.utils,warningDeprecated)
 importFrom(kwb.utils,windowsPath)
 importFrom(odbc32,odbcClose)
 importFrom(odbc32,odbcConnectAccess2007)
+importFrom(odbc32,sqlQuery)
 importFrom(stats,setNames)
 importFrom(utils,head)
 importFrom(utils,str)
